--- a/darkmoon/style.css
+++ b/darkmoon/style.css
@@ -10,7 +10,7 @@ html {
 }
 
 input {
-    background-color: #ffffff;
+    background-color: white;
     padding: 20px;
     border-radius: 4px;
 }
@@ -23,14 +23,14 @@ input {
 
 body {
     font-family: Arial, sans-serif;
-    background-color: #f2f2f2;
+    background-color: #173F5F;
 }
 
 form {
     max-width: 400px;
     margin: 0 auto;
     padding: 20px;
-    background-color: #ffffff;
+    background-color: #20639B;
     border-radius: 5px;
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
 }
@@ -51,7 +51,7 @@ input[type="file"] {
     width: 100%;
     padding: 10px;
     margin-bottom: 15px;
-    border: 1px solid #ccc;
+    border: 1px solid #808080;
     border-radius: 4px;
 }
 
@@ -59,7 +59,7 @@ input[type="submit"] {
     display: block;
     width: 100%;
     padding: 10px;
-    background-color: #b81717;
+    background-color: #444444;
     color: #fff;
     border: none;
     border-radius: 4px;
@@ -67,5 +67,5 @@ input[type="submit"] {
 }
 
 input[type="submit"]:hover {
-    background-color: #45a049;
+    background-color: rgb(53, 196, 65);
 }
