--- a/darkmoon/api/templates/index.html
+++ b/darkmoon/api/templates/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
-    <link href="style.css" rel="stylesheet" type="text/css" />
+    <link href="{{ url_for('static', path='/styles.css') }}" rel="stylesheet">
 </head>
 
 <body>
