feat: created a webpage for hash lookup and file upload

--- a/darkmoon/api/templates/index.html
+++ b/darkmoon/api/templates/index.html
@@ -50,6 +50,14 @@
         <input type="submit">
     </form>
 
+    <form action="hash.html">
+        <button>
+            Hash Lookup
+        </button>
+    </form>
+
+
+
 </body>
 
 </html>
