--- a/darkmoon/api/templates/index.html
+++ b/darkmoon/api/templates/index.html
@@ -6,7 +6,7 @@
     <link href="{{ url_for('static', path='/styles.css') }}" rel="stylesheet">
 </head>
 
-<form action="hash.html">
+<form action="/webpages/hash-lookup">
     <button>
         Hash Lookup
     </button>
