--- a/darkmoon/api/templates/hash.html
+++ b/darkmoon/api/templates/hash.html
@@ -6,9 +6,9 @@
     <link href="{{ url_for('static', path='/styles.css') }}" rel="stylesheet">
 </head>
 
-<form action="/webpages">
+<form action="/webpages/upload">
     <button>
-        Home Page
+        ISO Upload
     </button>
 </form>
 
