--- a/darkmoon/api/templates/index.html
+++ b/darkmoon/api/templates/index.html
@@ -1,55 +1,31 @@
 <!DOCTYPE html>
-
-<head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width">
-    <link href="{{ url_for('static', path='/styles.css') }}" rel="stylesheet">
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width">
+<link href="{{ url_for('static', path='/homepage.css') }}" rel="stylesheet">
 </head>
+<html>
 
 <body>
-
-    </div>
-
-    <h1>
-
-        <label for="Operating" class="opSystem" data-icon="u"></label>
-
-        <input id="Operating" name="opSystem" required="required" type="text" placeholder="Operating System" />
-
-    </h1>
-
-    <h1>
-
-        <label for="version" class="vers" data-icon="p"> </label>
-
-        <input id="version" name="password" required="required" type="text" placeholder="Version" />
-
-    </h1>
-    <h1>
-
-        <label for="build" class="bu" data-icon="u"> </label>
-
-        <input id="build" name="bu" required="required" type="text" placeholder="Build" />
-    </h1>
-
-    <form action>
-        <h2> .ISO Upload </h2>
-        <input type="file" id="myFile" name="filename">
-        <input type="submit">
-    </form>
-
-    <form>
-        <h2> Packer Template Upload </h2>
-        <input type="file" id="myFile" name="filename">
-        <input type="submit">
-    </form>
-
-    <form>
-        <h2> Answer File Upload </h2>
-        <input type="file" id="myFile" name="filename">
-        <input type="submit">
-    </form>
-
+    <header>
+        <div class="logo">
+            <h1 id="blackoutline">
+                <p>Darkmoon</p>
+            </h1>
+        </div>
+        <nav>
+            <ul>
+                <li><a href="/webpages">Home</a></li>
+                <div class="dropdown">
+                    <button class="dropbtn">Tools</button>
+                    <div class="dropdown-content">
+                        <a href="/webpages/hash-lookup">Hash Lookup</a>
+                        <a href="/webpages/upload">ISO Upload</a>
+                    </div>
+                </div>
+                <li><a href="">Credit</a></li>
+            </ul>
+        </nav>
+    </header>
 </body>
 
 </html>
