--- a/darkmoon/api/templates/index.html
+++ b/darkmoon/api/templates/index.html
@@ -1,31 +1,54 @@
 <!DOCTYPE html>
-<meta charset="utf-8">
-<meta name="viewport" content="width=device-width">
-<link href="{{ url_for('static', path='/homepage.css') }}" rel="stylesheet">
+
+<head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width">
+    <link href="{{ url_for('static', path='/homepage.css') }}" rel="stylesheet">
 </head>
+
 <html>
 
 <body>
+
     <header>
+
         <div class="logo">
+
             <h1 id="blackoutline">
+
                 <p>Darkmoon</p>
+
             </h1>
+
         </div>
+
         <nav>
+
             <ul>
+
                 <li><a href="/webpages">Home</a></li>
+
                 <div class="dropdown">
+
                     <button class="dropbtn">Tools</button>
+
                     <div class="dropdown-content">
+
                         <a href="/webpages/hash-lookup">Hash Lookup</a>
                         <a href="/webpages/upload">ISO Upload</a>
+
                     </div>
+
                 </div>
+
                 <li><a href="">Credit</a></li>
+
             </ul>
+
         </nav>
+
     </header>
+
 </body>
 
 </html>
