feat: Updated homepage

--- a/darkmoon/api/templates/index.html
+++ b/darkmoon/api/templates/index.html
@@ -14,7 +14,7 @@
         </div>
         <nav>
             <ul>
-                <li><a href="/webpages">Home</a></li>
+                <button class="dropbtn"><a href="/webpages">Home</a></button>
                 <div class="dropdown">
                     <button class="dropbtn">Tools</button>
                     <div class="dropdown-content">
@@ -22,10 +22,21 @@
                         <a href="/webpages/upload">ISO Upload</a>
                     </div>
                 </div>
-                <li><a href="">Credit</a></li>
+                <button class="dropbtn"><a href="#">Credit</a></button>
             </ul>
         </nav>
     </header>
+    <section>
+        <article>
+            <h2 id="border">This project will catalogue file metadata from
+                multiple Windows operating
+                systems. The data will be
+                available for lookup based on file name or file hashes.</h2>
+
+        </article>
+        <div class="logo1"></div>
+    </section>
+
 </body>
 
 </html>
