--- a/darkmoon/api/templates/upload.html
+++ b/darkmoon/api/templates/upload.html
@@ -30,9 +30,9 @@
 
                 <div class="dropdown-content">
 
-                    <a href="/webpages/hash-lookup">Hash Lookup</a>
 
                     <a href="/webpages/upload">ISO Upload</a>
+                    <a href="/webpages/hash-lookup">Hash Lookup</a>
 
                 </div>
 
@@ -50,56 +50,56 @@
 
 
     </div>
+    <h1></h1>
+
+    <h2></h2>
+    <form>
+        <h2> .ISO Upload </h2>
+        <input type="file" id="myFile" name="filename">
+        <input type="submit">
+
+        <h2></h2>
+        <h2> Packer Template Upload </h2>
+        <input type="file" id="myFile" name="filename">
+        <input type="submit">
+
+        <h2></h2>
+        <h2> Answer File Upload </h2>
+        <input type="file" id="myFile" name="filename">
+        <input type="submit">
+    </form>
+    <h2> </h2>
     <form>
         <h1>
 
-            <label for="Operating" class="opSystem" data-icon="u"></label>
+            <h2> Operating System</h2>
+            <label for="Operatingsyst" class="op" data-icon="o"> </label>
 
-            <input id="Operating" name="opSystem" required="required" type="text" placeholder="Operating System" />
+            <input id="" name="password" required="required" type="text" placeholder="Operating System" />
 
         </h1>
-
+        <hr>
         <h1>
-
+            <h2> Version </h2>
             <label for="version" class="vers" data-icon="p"> </label>
 
             <input id="version" name="password" required="required" type="text" placeholder="Version" />
 
+
+
         </h1>
-
+        <hr>
         <h1>
-
+            <h2> Build </h2>
             <label for="build" class="bu" data-icon="u"> </label>
 
             <input id="build" name="bu" required="required" type="text" placeholder="Build" />
 
         </h1>
-
-        <form action>
-
-            <h2> .ISO Upload </h2>
-            <input type="file" id="myFile" name="filename">
-            <input type="submit">
-
-        </form>
-
-        <form>
-
-            <h2> Packer Template Upload </h2>
-            <input type="file" id="myFile" name="filename">
-            <input type="submit">
-
-        </form>
-
-        <form>
-
-            <h2> Answer File Upload </h2>
-            <input type="file" id="myFile" name="filename">
-            <input type="submit">
-
-        </form>
-
     </form>
+
+
+
 
 </body>
 
