feat: create webpage

--- a/darkmoon/api/static/hash.css
+++ b/darkmoon/api/static/hash.css
@@ -5,23 +5,6 @@
     box-sizing: border-box;
 }
 
-form {
-    max-width: 400px;
-    margin: 0 auto;
-    padding: 20px;
-    background-color: rgb(46, 14, 116);
-    border-radius: 5px;
-    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-}
-
-.centered {
-    position: fixed;
-    top: 50%;
-    left: 50%;
-    /* bring your own prefixes */
-    transform: translate(-50%, -50%);
-}
-
 body {
     background: rgb(116, 33, 212);
     background: linear-gradient(90deg, rgba(116, 33, 212, 1) 0%, rgba(61, 49, 149, 1) 48%, rgba(64, 105, 201, 1) 100%);
@@ -71,14 +54,13 @@ button {
 }
 
 nav li a:hover {
-    color: #7468e4;
+    color: #045476;
     transition: all 0.4s ease 0s;
 }
 
 button:hover {
     background-color: #045476;
     transition: all 0.4s ease 0s;
-
 }
 
 .dropdown {
@@ -124,35 +106,46 @@ button:hover {
     -webkit-text-stroke: 2px #ffffff;
 }
 
-
+form {
+    max-width: 800px;
+    margin: 0 auto;
+    padding: 30px;
+    background-color: rgb(255, 255, 255);
+    border-radius: 5px;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+}
 
 h1 {
+    color: rgb(0, 0, 0);
     font-size: 1px;
     margin-bottom: 10px;
-    display: flexbox;
 
 }
 
 h2 {
+    border-color: black;
     font-size: 18px;
     margin-bottom: 10px;
-    color: white;
+    color: #000000;
 }
 
 input[type="text"],
 input[type="file"] {
-    width: 100%;
+    width: 50%;
+    margin-left: 0px;
+    border: 2px solid #000000;
     padding: 10px;
     margin-bottom: 15px;
-    border: 2px solid #808080;
     border-radius: 4px;
 }
 
 input[type="submit"] {
     display: block;
-    width: 100%;
+    width: 30%;
     padding: 10px;
-    background-color: #170aa6;
+    margin-left: 0px;
+    margin-right: 50px;
+    background-color: #5d05bc;
     color: #fff;
     border: none;
     border-radius: 4px;
