--- a/darkmoon/api/templates/hash.html
+++ b/darkmoon/api/templates/hash.html
@@ -45,15 +45,13 @@
 <body>
 
     </div>
-
+    <h1></h1>
     <form action>
 
         <form action>
-
             <form action>
 
                 <h2> Hash </h2>
-
 
                 <label for="Hash" class="hash" data-icon="p"> </label>
                 <input id="" name="password" required="required" type="text" placeholder="Hash" />
@@ -84,74 +82,28 @@
 
                 <input type="submit" value="Submit" />
 
-                <form>
-                    </h1>
-                    <form>
-                        <form action>
+            </form>
 
-                            <h2> Upload File </h2>
-                            <input type="file" id="myFile" name="filename">
-                            <input type="submit">
 
-                        </form>
+        </form>
 
-                    </form>
+        <h2>
 
-                    =======
-                    <form action>
+        </h2>
 
-                        <h2> Hash </h2>
+        <form>
 
-                        <label for="Hash" class="hash" data-icon="p"> </label>
-                        <input id="" name="password" required="required" type="text" placeholder="Hash" />
+            <form action>
 
-                        <hr>
+                <h2> Upload File </h2>
+                <input type="file" id="myFile" name="filename">
+                <h1></h1>
+                <input type="submit" value="Submit Form">
 
-                        <h2>
 
-                        </h2>
+            </form>
 
-                        <h2>Hash Type</h2>
-
-                        <input type="radio" id="MDS" name="hash_type" value="MDS">
-                        <label for="MDS">MDS</label><br>
-
-                        <input type="radio" id="SHA-1" name="hash_type" value="SHA-1">
-                        <label for="SHA-1">SHA-1</SHA-1></label><br>
-
-                        <input type="radio" id="SHA-256" name="hash_type" value="SHA-256">
-                        <label for="SHA-256">SHA-256</label><br>
-
-                        <input type="radio" id="SHA-512" name="hash_type" value="SHA-512">
-                        <label for="SHA-512">SHA-512</label>
-
-                        <h2>
-
-                        </h2>
-
-                        <input type="submit" value="Submit" />
-
-                    </form>
-
-                    <input type="submit" value="Submit" />
-
-                </form>
-
-                <h2>
-
-                </h2>
-
-                <form>
-
-                    <form action>
-
-                        <h2> Upload File </h2>
-                        <input type="file" id="myFile" name="filename">
-                        <input type="submit">
-
-                    </form>
-
-                </form>
+        </form>
 
 </body>
 
