feat: create homepage and clean up initial form

--- a/darkmoon/api/templates/upload.html
+++ b/darkmoon/api/templates/upload.html
@@ -47,8 +47,33 @@
 
     </div>
     <h1></h1>
+
+    <form action>
+
+        <h2> .ISO Upload </h2>
+        <input type="file" id="myFile" name="filename">
+        <input type="submit">
+
+    </form>
+
+    <form>
+
+        <h2> Packer Template Upload </h2>
+        <input type="file" id="myFile" name="filename">
+        <input type="submit">
+
+    </form>
+
+    <form>
+
+        <h2> Answer File Upload </h2>
+        <input type="file" id="myFile" name="filename">
+        <input type="submit">
+
+    </form>
     <form>
         <h1>
+
 
             <label for="Operating" class="opSystem" data-icon="u"></label>
 
@@ -69,35 +94,15 @@
             <label for="build" class="bu" data-icon="u"> </label>
 
             <input id="build" name="bu" required="required" type="text" placeholder="Build" />
+            <h1></h1>
+            <input type="submit" value="Submit Form">
+
 
         </h1>
-
-
-        <form action>
-
-            <h2> .ISO Upload </h2>
-            <input type="file" id="myFile" name="filename">
-            <input type="submit">
-
-        </form>
-
-        <form>
-
-            <h2> Packer Template Upload </h2>
-            <input type="file" id="myFile" name="filename">
-            <input type="submit">
-
-        </form>
-
-        <form>
-
-            <h2> Answer File Upload </h2>
-            <input type="file" id="myFile" name="filename">
-            <input type="submit">
-
-        </form>
-
     </form>
+
+
+
 
 </body>
 
