feat: create homepage and clean up initial form

--- a/darkmoon/api/static/hash.css
+++ b/darkmoon/api/static/hash.css
@@ -59,7 +59,7 @@ nav li a:hover {
 }
 
 button:hover {
-    background-color: #045476;
+    background-color: #4069C9;
     transition: all 0.4s ease 0s;
 }
 
