--- a/darkmoon/api/templates/upload.html
+++ b/darkmoon/api/templates/upload.html
@@ -52,45 +52,46 @@
 
         <h2> .ISO Upload </h2>
         <input type="file" id="myFile" name="filename">
-        <input type="submit">
 
-    </form>
 
-    <form>
 
+        <hr>
+
+        <h1></h1>
         <h2> Packer Template Upload </h2>
         <input type="file" id="myFile" name="filename">
-        <input type="submit">
 
-    </form>
 
-    <form>
 
+        <hr>
+
+        <h1></h1>
         <h2> Answer File Upload </h2>
         <input type="file" id="myFile" name="filename">
-        <input type="submit">
+
 
     </form>
+    <h1></h1>
     <form>
         <h1>
 
-
+            <h2> Operating System </h2>
             <label for="Operating" class="opSystem" data-icon="u"></label>
 
             <input id="Operating" name="opSystem" required="required" type="text" placeholder="Operating System" />
 
         </h1>
-
+        <h1></h1>
         <h1>
-
+            <h2> Version </h2>
             <label for="version" class="vers" data-icon="p"> </label>
 
             <input id="version" name="password" required="required" type="text" placeholder="Version" />
 
         </h1>
-
+        <h1></h1>
         <h1>
-
+            <h2> Build </h2>
             <label for="build" class="bu" data-icon="u"> </label>
 
             <input id="build" name="bu" required="required" type="text" placeholder="Build" />
