feat: made a new results.html file

--- a/darkmoon/api/templates/upload.html
+++ b/darkmoon/api/templates/upload.html
@@ -42,12 +42,11 @@
 
     </h1>
 
-    <form action>
+    <form action="/webpages/results">
 
         <h2> .ISO Upload </h2>
         <input type="file" id="myFile" name="filename">
-        <input type="submit">
-
+        <input type="submit" onclick="location.href='../common/main.py';" value="submit" />
     </form>
 
     <form>
