feat: Added new changes from 65-new-hash branch

--- a/darkmoon/api/templates/index.html
+++ b/darkmoon/api/templates/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 
-<meta charset="utf-8">
-
-<meta name="viewport" content="width=device-width">
-
-<link href="{{ url_for('static', path='/homepage.css') }}" rel="stylesheet">
+<head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width">
+    <link href="{{ url_for('static', path='/homepage.css') }}" rel="stylesheet">
+    <link href="{{ url_for('static',path='/variables.css') }}" rel="stylesheet">
 </head>
 
 <html>
