feat: Added new design key and condensed css filesh

--- a/darkmoon/api/templates/upload.html
+++ b/darkmoon/api/templates/upload.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
-    <link href="{{ url_for('static', path='/upload.css') }}" rel="stylesheet">
+    <link href="{{ url_for('static', path='/style.css') }}" rel="stylesheet">
     <link href="{{ url_for('static',path='/variables.css') }}" rel="stylesheet">
 </head>
 
@@ -71,9 +71,6 @@
         <input type="file" id="myFile" name="filename">
 
 
-    </form>
-    <h1></h1>
-    <form>
         <h1>
 
             <h2> Operating System </h2>
