--- a/darkmoon/api/static/homepage.css
+++ b/darkmoon/api/static/homepage.css
@@ -189,3 +189,52 @@ button:hover {
         content: ''
     }
 }
+
+form {
+    max-width: 800px;
+    margin: 0 auto;
+    padding: 30px;
+    background-color: white;
+    border-radius: 5px;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+}
+
+h1 {
+    color: rgb(0, 0, 0);
+    font-size: 1px;
+    margin-bottom: 10px;
+}
+
+h2 {
+    border-color: black;
+    font-size: 18px;
+    margin-bottom: 10px;
+    color: #000000;
+}
+
+input[type="text"],
+input[type="file"] {
+    width: 50%;
+    margin-left: 0px;
+    border: 2px solid #000000;
+    padding: 10px;
+    margin-bottom: 15px;
+    border-radius: 4px;
+}
+
+input[type="submit"] {
+    display: block;
+    width: 30%;
+    padding: 10px;
+    margin-left: 0px;
+    margin-right: 50px;
+    background-color: #5d05bc;
+    color: #fff;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+}
+
+input[type="submit"]:hover {
+    background-color: rgb(81, 95, 200);
+}
