--- a/darkmoon/api/static/style.css
+++ b/darkmoon/api/static/style.css
@@ -13,6 +13,15 @@ body {
     background-position: center;
 }
 
+.homepage {
+    background: rgb(116, 33, 212);
+    background: linear-gradient(114deg, rgba(116, 33, 212, 1) 0%, rgba(61, 49, 149, 1) 48%, rgba(64, 105, 201, 1) 100%);
+    background-image: url('Darkmoon.jpg');
+    font-family: Arial, sans-serif;
+    background-size: cover;
+    background-position: center;
+}
+
 header {
     width: 100%;
     height: 75px;
@@ -23,12 +32,34 @@ header {
     background: rgba(0, 0, 0, 0.2);
 }
 
-.logo {
-    font-size: 40PX;
-    font-weight: bold;
-    color: #07445F;
-    letter-spacing: 1.5px;
-    cursor: pointer;
+section {
+    padding: 10px;
+    font-size: 20px;
+    color: white;
+    display: flex;
+    align-items: center;
+    justify-content: left;
+    height: 80vh;
+}
+
+article {
+    float: left;
+    padding: 20px;
+    width: 70%;
+    height: 300px;
+}
+
+section::after {
+    content: "";
+    display: table;
+    clear: both;
+}
+
+footer {
+    padding: 10px;
+    text-align: center;
+    color: white;
+    width: 100%;
 }
 
 nav li {
@@ -47,7 +78,7 @@ button {
 }
 
 button {
-    background: rgba(0, 0, 0, 0.2);
+    background-color: rgba(0, 0, 0, 0.2);
     border: 2px #045476;
     border-radius: 50px;
     padding: 9px 25px;
@@ -61,49 +92,6 @@ nav li a:hover {
 button:hover {
     background-color: #4069C9;
     transition: all 0.4s ease 0s;
-}
-
-.dropdown {
-    position: relative;
-    display: inline-block;
-}
-
-.dropdown-content {
-    display: none;
-    position: absolute;
-    background-color: white;
-    min-width: 160px;
-    box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0);
-    z-index: 1;
-}
-
-.dropdown-content a {
-    color: rgb(0, 0, 0);
-    padding: 12px 16px;
-    text-decoration: none;
-    display: block;
-}
-
-.dropdown-content a:hover {
-    background-color: #4069C9;
-}
-
-.dropdown:hover .dropdown-content {
-    display: block;
-}
-
-.dropdown:hover .dropbtn {
-    background-color: #4069C9;
-}
-
-#blackoutline {
-    font-family: Arial, sans-serif;
-    font-size: 40px;
-    color: #ffffff;
-
-    /* the first value is the width
-    and the second value is the color */
-    -webkit-text-stroke: 2px #ffffff;
 }
 
 form {
@@ -154,4 +142,100 @@ input[type="submit"] {
 
 input[type="submit"]:hover {
     background-color: rgb(81, 95, 200);
+}
+
+.logo {
+    font-size: 40PX;
+    font-weight: bold;
+    color: #07445F;
+    letter-spacing: 1.5px;
+    cursor: pointer;
+}
+
+.dropdown {
+    position: relative;
+    display: inline-block;
+}
+
+.dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #f1f1f1;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+    z-index: 1;
+}
+
+.dropdown-content a {
+    color: rgb(0, 0, 0);
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+}
+
+.dropdown-content a:hover {
+    background-color: #4069C9;
+}
+
+.dropdown:hover .dropdown-content {
+    display: block;
+}
+
+.dropdown:hover .dropbtn {
+    background-color: #4069C9;
+}
+
+.logo1 {
+    max-height: 100%;
+    width: 700px;
+    height: 700px;
+    background-size: cover;
+    background-image: url('File.png');
+    margin-top: 0em;
+    margin-left: -8em;
+    object-position: 100% 50%;
+    object-fit: none;
+}
+
+
+
+#blackoutline {
+    font-family: Arial, sans-serif;
+    font-size: 40px;
+    color: #ffffff;
+
+    /* the first value is the width
+    and the second value is the color */
+    -webkit-text-stroke: 2px #ffffff;
+}
+
+#border {
+    --b: .5em;
+    /* border width */
+    --c: 3em;
+    /* corner size */
+    --r: 2em;
+    /* corner rounding */
+    position: relative;
+    margin: 1em auto;
+    border: solid var(--b) transparent;
+    padding: 1em;
+    max-width: 23em;
+    font: 1.25em ubuntu, sans-serif;
+
+    &::before {
+        position: absolute;
+        z-index: -1;
+        inset: calc(-1*var(--b));
+        border: inherit;
+        border-radius: var(--r);
+        background: linear-gradient(#4069c9, #4069c9, rgb(84, 7, 151)) border-box;
+        --corner:
+            conic-gradient(from -90deg at var(--c) var(--c), red 25%, #0000 0) 0 0/ calc(100% - var(--c)) calc(100% - var(--c)) border-box;
+        --inner: conic-gradient(red 0 0) padding-box;
+        -webkit-mask: var(--corner), var(--inner);
+        -webkit-mask-composite: source-out;
+        mask: var(--corner) subtract, var(--inner);
+        content: ''
+    }
 }
