--- a/darkmoon/api/templates/index.html
+++ b/darkmoon/api/templates/index.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
-    <link href="{{ url_for('static', path='/homepage.css') }}" rel="stylesheet">
+    <link href="{{ url_for('static', path='/style.css') }}" rel="stylesheet">
     <link href="{{ url_for('static',path='/variables.css') }}" rel="stylesheet">
 </head>
 
 <html>
 
-<body>
+<body class="homepage">
 
     <header>
 
@@ -48,7 +48,7 @@
     </header>
     <section>
         <article>
-            <h2 id="border">This project will catalogue file metadata from
+            <h2 id="border" style="color:white">This project will catalogue file metadata from
                 multiple Windows operating
                 systems. The data will be
                 available for lookup based on file name or file hashes.</h2>
