--- a/darkmoon/api/templates/index.html
+++ b/darkmoon/api/templates/index.html
@@ -57,6 +57,11 @@
         <div class="logo1"></div>
     </section>
 
+    <footer>
+        <button class="dropbtn"><a href="https://github.com/obscuritylabs/darkmoon">View Darkmoon
+                Repository</a></button>
+    </footer>
+
 </body>
 
 </html>
