--- a/darkmoon/api/static/style.css
+++ b/darkmoon/api/static/style.css
@@ -95,8 +95,8 @@ button:hover {
 }
 
 form {
+    margin: 60px 350px auto;
     max-width: 800px;
-    margin: 0 auto;
     padding: 30px;
     background-color: rgb(255, 255, 255);
     border-radius: 5px;
