--- a/darkmoon/api/templates/results.html
+++ b/darkmoon/api/templates/results.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
+<html>
 
 <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width">
-    <link href="{{ url_for('static', path='/styles.css') }}" rel="stylesheet">
+    <title>Results</title>
 </head>
 
 <body>
-    <h1>
-        results
-    </h1>
+    <h1>Uploaded ISO File Name</h1>
+    <p>Filename: {{ filename }}</p>
 </body>
+
+</html>
